--- a/src/styles/pages/ClientActivityInfo.css
+++ b/src/styles/pages/ClientActivityInfo.css
@@ -1,10 +1,11 @@
 .ActivityInfo-form-container {
   width: 60%;
   margin: 0 auto;
-  background-color: #E3C8C4;
+  background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
   border-radius: 10px;
+  padding-bottom: 20px;
 }
 
 .ActivityInfo-form-title {
@@ -16,8 +17,19 @@
   color: white;
 }
 
+.ActivityInfo-container {
+  width: 100%;
+  margin: 0 auto;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  border-radius: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .ActivityInfo-label {
-  color: orange;
+  color: red;
 }
 
 .ActivityInfo-back-button {
@@ -53,21 +65,21 @@
   border-color: blue; /* Style pour l'édition */
 }
 
-.ActivityInfo-text-orange {
-  border: 2px solid orange;
+.ActivityInfo-text-red {
+  border: 2px solid red;
   border-radius: 20px;
   padding: 8px;
   width: 100%;
 }
 
-.ActivityInfo-label-orange {
+.ActivityInfo-label-red {
   font-weight: bold;
   color: #E1604D;
   margin-right: 50px;
 }
 
 .ActivityInfo-textarea {
-  border: 2px solid orange;
+  border: 2px solid red;
   border-radius: 10px;
   padding: 8px;
   width: 100%;
@@ -77,7 +89,7 @@
 }
 
 .ActivityInfo-button {
-  background-color: orange;
+  background-color: red;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -86,7 +98,7 @@
 }
 
 .ActivityInfo-center-button .ActivityInfo-button[type="submit"] {
-  background-color: orange;
+  background-color: red;
   /* Autres styles optionnels */
   color: white;
   border: none;
@@ -121,7 +133,7 @@
 }
 
 .ActivityInfo-image-upload label {
-  background-color: orange;
+  background-color: red;
   color: white;
   border-radius: 5px;
   padding: 10px;
@@ -175,7 +187,7 @@
 }
 
 .ActivityInfo-input {
-  border: 2px solid orange;
+  border: 2px solid red;
   border-radius: 10px;
   padding: 6px;
   width: 100%;
