--- a/src/styles/pages/ClientModifyActivity.css
+++ b/src/styles/pages/ClientModifyActivity.css
@@ -1,7 +1,7 @@
 .ModifyActivity-form-container {
   width: 60%;
   margin: 0 auto;
-  background-color: #E3C8C4;
+  background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
   border-radius: 10px;
@@ -14,6 +14,17 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   color: white;
+}
+
+.ModifyActivity-container {
+  width: 100%;
+  margin: 0 auto;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  border-radius: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .ModifyActivity-label {
