--- a/src/styles/pages/ClientProfile.css
+++ b/src/styles/pages/ClientProfile.css
@@ -1,7 +1,7 @@
 /* ../styles/pages/ClientProfile.css */
 
 .button-box {
-  background-color: #E3C8C4;
+  background-color: white;
   padding: 20px;
   width: 70%;
   margin: 0 auto;
@@ -16,16 +16,18 @@
   background-color: #E1604D;
   color: white;
   text-align: center;
-  padding: 15px;
-  border-radius: 15px;
-  margin-bottom: 20px;
-  max-width: 30%; /* Réduisez davantage la largeur */
-  margin-left: auto;
-  margin-right: auto;
+  border-radius: 20px;
+  max-width: 30%;
   font-size: 24px;
   font-weight: bold;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2); /* Ajoutez ici l'ombre */
-}
+  width: 250px;
+  height: 50px;
+  display: flex; /* Add this line */
+  justify-content: center; /* Add this line */
+  align-items: center; /* Add this line */
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Add this line */
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+ }
 
 .button-container {
   display: flex;
@@ -37,11 +39,11 @@
 .button {
   width: 150px;
   height: 150px;
-  background-color: white;
+  background-color: #E1604D;
   border: none;
   border-radius: 15px;
   margin: 15px;
-  color: #E1604D;
+  color: white;
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
