--- a/src/styles/pages/ClientMyContract.css
+++ b/src/styles/pages/ClientMyContract.css
@@ -9,7 +9,7 @@
 .MyContract-form-container {
   width: 60%;
   margin: 0 auto;
-  background-color: #E3C8C4;
+  background-color: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
   border-radius: 10px;
