--- a/src/styles/pages/ClientAvisActivity.css
+++ b/src/styles/pages/ClientAvisActivity.css
@@ -7,6 +7,26 @@
   border-radius: 10px;
 }
 
+.ClientAvisActivity-back-button {
+  align-self: flex-start;
+  margin: 10px;
+}
+
+.ClientAvisActivity-back-button button {
+  padding: 5px 10px;
+  background-color: #E1604D;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+}
+
+.ClientAvisActivity-back-button button:hover {
+  background-color: #D15040;
+}
+
 .ClientAvisActivity-form-title {
   text-align: center;
   justify-content: center;
@@ -159,18 +179,6 @@
   height: 150px;
 }
 
-.ClientAvisActivity-form-container button {
-  background-color: var(--mainColor);
-  color: white;
-  border: none;
-  width: 100px;
-  height: 40px;
-  padding: 10px 20px;
-  border-radius: 20px;
-  cursor: pointer;
-  font-weight: bold;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
 
 .ClientAvisActivity-center-button button[type="submit"] {
   background-color: var(--mainColor);
