--- a/src/styles/pages/CreateActivityPage.css
+++ b/src/styles/pages/CreateActivityPage.css
@@ -27,6 +27,16 @@
   /* Add shadow to text */
 }
 
+.CreateActivity-back-button button {
+  padding: 5px 10px;
+  background-color: #E1604D;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+}
 
 .CreateActivity-container {
   display: flex;
@@ -106,7 +116,7 @@
   height: 150px;
 }
 
-.CreateActivity-form-container button {
+.CreateActivity-form-button {
   background-color: var(--mainColor);
   color: white;
   border: none;
